<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <color name="black_transparent">#3f000000</color>

    <!--String for Error Messages-->

    <string name="app_name">DoorBell Rider</string>
    <string name="internet_not_available">Internet not available</string>

    <!--String for General Messages-->
    <string name="download_error">Error while downloading</string>
    <string name="downloading">Downloading</string>
    <string name="forgot">We just need your registered Email id to sent you \n password reset instructions</string>

    <!--String for Toast Messages-->
    <string name="phone_error">Enter 9 digit phone number</string>
    <string name="phone_error_zero">Phone Number never start with 0</string>
    <string name="update">Update</string>
    <string name="email_empty">Email is empty</string>
    <string name="password_empty">Password Empty</string>
    <string name="empty_first_name">Empty First Name</string>
    <string name="empty_last_name">Empty Last Name</string>
    <string name="password_mis_match">Password did not match</string>

    <!--String for Base Fragment-->

    <string name="select_picture">Kindly select picture</string>

    <!--String for Navigation Drawer-->

    <string name="favourites">Favourite</string>
    <string name="download">Download</string>

    <!--String for Menu Text-->

    <string name="about_us">Privacy Policy</string>
    <string name="using_camera">Using Camera</string>
    <string name="using_gallery">Using Gallery</string>
    <string name="picture_selector">Select Picture</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="reset">Reset</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="already_have_account">Already have an account ?</string>

    <!--String for Place Holder-->

    <string name="did_not_create_account">Don\'t have an account\t?</string>

    <!--String for Permission Messages-->

    <string name="external_storage_permission">It need Storage permission for app to work</string>


    <!--String for Edit Text hint-->

    <string name="read_phone_state_permission">It need network state permission for app to work</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="progress">Progress</string>

    <!--String for HomeFragment screen-->

    <string name="load_ad">Load Ad</string>
    <string name="setting">Setting</string>
    <string name="loading_configuration">Loading</string>
    <string name="general">General</string>

    <string name="my_profile">My Profile</string>

    <!--String for Google Map Key -->

    <string name="google_map_key">AIzaSyDG-n-VhWbIVaw4uKK-oxxUq2OE9-xhzxw</string>

    <string name="youtube_api_key">youtube_api_key</string>
    <string name="error_player">Youtube player have some error %s</string>

    <!--String for Live Wallpaper-->


    <string name="downloading_tagline">Downloading</string>
    <string name="need_camera_permission">It need camera permission for app to run</string>
    <string name="need_call_permission">It need call permission for calling</string>
    <string name="delivery">Delivery</string>
    <string name="cost">Cost</string>

    <string name="credit_debit_card">Credit Cards</string>
    <string name="cash_on_delivery">COD</string>
    <string name="done">Done</string>
    <string name="cod">Cash On Delivery (COD)</string>
    <string name="debit_credit_card">Debit / Credit Cards</string>

    <string name="phone_authentication">Authenticate Your Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify Phone</string>
    <string name="verification_code">Verification Code</string>
    <string name="email_phone">Empty Phone</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="upload_picture_tagline">Kindly add the pictures</string>

    <string name="no_order">No Order Found</string>
    <string name="no_order_tagline">Currently you did not make any order</string>
    <string name="important_notice">Important Notice</string>
    <string name="cancel">Cancel</string>
    <string name="chatting">Chatting</string>
    <string name="write_message">Type a message</string>
    <string name="typing_tagline">is typing ......</string>
    <string name="current_order">Current Order</string>
    <string name="order_history">Order History</string>
    <string name="accept_order">Accept Order</string>
    <string name="payment_type">Payment</string>
    <string name="cancel_important_notice">Make sure , you want to cancel the navigation , it would cancel the order &amp; cause interruption</string>
    <string name="order_complete_notice">Kindly confirm it once again , you want to complete the order finally</string>
    <string name="no_order_history_tagline">You did not complete any order</string>
    <string name="my_document">My Documents</string>
    <string name="online_status">Enable to receive orders</string>
    <string name="my_bank_detail">My Bank Detail</string>
    <string name="document_uploader">My Documents</string>
    <string name="no_document">No Document Found</string>
    <string name="no_document_tagline">You did not add any documents</string>
    <string name="upload_document">Upload Documents..</string>
    <string name="approved">Approved</string>
    <string name="declined">Reject</string>
    <string name="awating_approval">Awaiting Approval</string>
    <string name="ready_to_upload">Ready to Upload</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account No.</string>
    <string name="bank_transist_no">Transist No</string>
    <string name="bank_no">Bank No</string>
    <string name="update_detail">Update Detail</string>
    <string name="adding_bank_detail">Adding Detail ...</string>
    <string name="update_bank_detail">Updating Detail</string>
    <string name="empty_holder_name">Empty holder name</string>
    <string name="empty_account_no">Empty account no</string>
    <string name="empty_transist_no">Empty transist no</string>
    <string name="empty_bank_no">Empty bank no</string>
    <string name="creating_account">Creating Account ..</string>
    <string name="updating_profile">Updating Profile..</string>
    <string name="loging_user">Login User ..</string>
    <string name="route_direction"><![CDATA[Route & Direction]]></string>
    <string name="password_sent_email">Kindly check your email , we send the password at your given email</string>
    <string name="customer_name">Customer Detail</string>
    <string name="billing_detail">Billing Detail</string>


</resources>
