<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.rs.doorbell.TextviewUtil.LemonMilkTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:textColor="?attr/colorLabel"
            android:textSize="@dimen/tagline_text_size"
            android:layout_gravity="start"></com.rs.doorbell.TextviewUtil.LemonMilkTextview>

        <com.rs.doorbell.EditTextUtil.NormalEditText
            android:id="@+id/edit_customer_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTagline"
            android:textColorHint="?attr/colorTagline"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>

        <com.rs.doorbell.EditTextUtil.NormalEditText
            android:id="@+id/edit_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTagline"
            android:textColorHint="?attr/colorTagline"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical">

            <com.rs.doorbell.EditTextUtil.NormalEditText
                android:id="@+id/edit_payment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="@dimen/tagline_text_size"
                android:textColor="?attr/colorTagline"
                android:textColorHint="?attr/colorTagline"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
                android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>

            <com.rs.doorbell.EditTextUtil.NormalEditText
                android:id="@+id/edit_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/tagline_text_size"
                android:textColor="?attr/colorTagline"
                android:textColorHint="?attr/colorTagline"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
                android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>



        </LinearLayout>

        <com.rs.doorbell.TextviewUtil.LemonMilkTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_detail"
            android:layout_marginBottom="15dp"
            android:textColor="?attr/colorLabel"
            android:textSize="@dimen/tagline_text_size"
            android:layout_gravity="start"></com.rs.doorbell.TextviewUtil.LemonMilkTextview>


        <com.rs.doorbell.EditTextUtil.NormalEditText
            android:id="@+id/edit_building"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTagline"
            android:textColorHint="?attr/colorTagline"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edit_text"
            >


            <com.rs.doorbell.EditTextUtil.NormalEditText
                android:id="@+id/edit_street_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="@dimen/tagline_text_size"
                android:textColor="?attr/colorTagline"
                android:textColorHint="?attr/colorTagline"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>


          
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.rs.doorbell.EditTextUtil.NormalEditText
                android:id="@+id/edit_area"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="@dimen/tagline_text_size"
                android:textColor="?attr/colorTagline"
                android:textColorHint="?attr/colorTagline"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
                android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>

            <com.rs.doorbell.EditTextUtil.NormalEditText
                android:id="@+id/edit_unit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/tagline_text_size"
                android:textColor="?attr/colorTagline"
                android:textColorHint="?attr/colorTagline"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
                android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>



        </LinearLayout>



        <com.rs.doorbell.EditTextUtil.NormalEditText
            android:id="@+id/edit_comment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTagline"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="?attr/colorTagline"
            android:background="@drawable/bg_edit_text"
            android:gravity="top"
            android:paddingTop="15dp"
            android:paddingStart="10dp"></com.rs.doorbell.EditTextUtil.NormalEditText>


        <com.rs.doorbell.TextviewUtil.NormalTextview
            android:id="@+id/txt_confirm_checkout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_call_to_action"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/white"
            android:text="@string/done"></com.rs.doorbell.TextviewUtil.NormalTextview>

    </LinearLayout>

</RelativeLayout>